MP-3273 Task/3273 tests